# error-recovery

./: README.md  pyproject.toml
.github/workflows/: release.yml
src/error_recovery/: __init__.py  cli.py  middleware.py  models.py  pattern_matcher.py  recovery_engine.py
tests/: conftest.py  test_error_classifier.py  test_middleware.py
